<resources>
    <string name="app_name">Hjørnet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="button">My Button</string>
    <string name="button_buy">Buy</string>
    <string name="button_register">Register</string>

    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="streetAddress">Street address</string>
    <string name="postalArea">Postal area</string>
    <string name="postalCode">Postal code</string>
    <string name="signup">Sign up</string>

    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="addImage">Add image</string>
    <string name="newItem">New item</string>
    <string name="newItemSuccess">New item created successfully</string>
    <string name="newItemError">New item failed to be created</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
